--- a/services.html
+++ b/services.html
@@ -44,7 +44,7 @@
     <div class="main-body">
       <div class="digital-design">
         <h3>
-          Digital Design
+          Digital Designs
         </h3>
         <p>
           Nulla suscipit interdum diam at maximus. Proin vitae tellus rutrum, accumsan nunc sit amet, iaculis tortor. Mauris consectetur
